--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.2.1
 	adafruit/DHT sensor library@^1.4.6
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	fmalpartida/LiquidCrystal@^1.5.0
