--- a/platformio.ini
+++ b/platformio.ini
@@ -11,9 +11,11 @@
 [env:d1]
 platform = espressif8266
 board = d1
+monitor_speed = 115200
+monitor_port = /dev/ttyUSB0
 framework = arduino
 lib_deps = 
 	arduino-libraries/NTPClient@^3.2.1
-	adafruit/DHT sensor library@^1.4.6
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
-	fmalpartida/LiquidCrystal@^1.5.0
+	adafruit/RTClib@^2.1.4
+	adafruit/Adafruit BME280 Library@^2.2.4
