--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:d1]
+build_type = release
 platform = espressif8266
 board = d1
 monitor_speed = 115200
@@ -19,3 +20,4 @@ lib_deps =
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	adafruit/RTClib@^2.1.4
 	adafruit/Adafruit BME280 Library@^2.2.4
+	bblanchon/ArduinoJson@^7.3.1
