--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,4 @@ lib_deps =
 	adafruit/RTClib@^2.1.4
 	adafruit/Adafruit BME280 Library@^2.2.4
 	bblanchon/ArduinoJson@^7.3.1
+	knolleary/PubSubClient@^2.8
